--- a/Test task/2 task/index.css
+++ b/Test task/2 task/index.css
@@ -16,6 +16,8 @@ html {
 .page {
   display: grid;
   grid-template-rows: min-content 1fr min-content;
+  min-width: 320px;
+  max-width: 1440px;
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
