--- a/Test task/2 task/index.css
+++ b/Test task/2 task/index.css
@@ -54,3 +54,91 @@ a {
   width: 1140px;
   margin: 0 auto;
 }
+
+/* header */
+
+.page-header {
+  padding-top: 46px;
+}
+
+.page-header__nav {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.main-navigation__logo {
+  display: block;
+  width: 140px;
+  height: 24px;
+  margin-right: 24px;
+}
+
+.main-navigation__site-navigation {
+  display: flex;
+  max-width: 503px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.site-navigation__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.site-navigation__link {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--main-text-color);
+}
+
+.main-navigation__wrapper {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.main-navigation__phone {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: right;
+  color: var(--main-text-color);
+}
+
+.social {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.main-navigation__socials {
+  margin-left: 47px;
+}
+
+.social__item {
+  width: 20px;
+  height: 20px;
+}
+
+.social__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.main-navigation__slogan {
+  width: 181px;
+  margin: 0;
+  margin-top: 10px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 12px;
+  color: var(--main-text-color);
+}
