--- a/Test task/2 task/index.css
+++ b/Test task/2 task/index.css
@@ -1,6 +1,8 @@
 :root {
   --main-text-color: #E4E5EA;
+  --second-text-color: #656566;
   --main-bg-color: #0E1014;
+  --main-button-color: #4077F3;
 }
 
 html {
@@ -141,4 +143,218 @@ a {
   font-size: 10px;
   line-height: 12px;
   color: var(--main-text-color);
+}
+
+/* main-contetn */
+
+.main-content {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 90px;
+}
+
+.main-content__right {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content__title {
+  max-width: 365px;
+  margin: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 58px;
+  color: var(--main-text-color);
+}
+
+.main-content__title span {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 58px;
+  background: linear-gradient(92deg, #FCB045 27.14%, #FF3F78 121.36%), #E4E5EA;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  /* text-fill-color: transparent; */
+}
+
+.main-content__text {
+  max-width: 262px;
+  margin: 0;
+  margin-top: 30px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: var(--main-text-color);
+}
+
+.main-content__slogan {
+  max-width: 291px;
+  margin: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: right;
+  color: var(--main-text-color);
+}
+
+.main-content__slogan span {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: right;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, #FCB045 36.99%, #FD1D1D 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.gifts {
+  display: grid;
+  grid-template-columns: 146px 153px;
+  gap: 10px;
+  row-gap: 30px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.main-content__list {
+  margin-top: 40px;
+}
+
+.gifts__header {
+  margin: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: right;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--main-text-color);
+}
+
+.gifts__text {
+  margin: 0;
+  margin-top: 6px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: var(--main-text-color);
+}
+
+.main-content__button {
+  display: block;
+  max-width: 262px;
+  margin-top: 82px;
+  margin-left: auto;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: var(--main-text-color);
+  background-color: var( --main-button-color);
+}
+
+/* footer */
+
+.page-footer {
+  padding-top: 124px;
+}
+
+.page-footer a {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #E4E5EA;
+}
+
+.page-footer__row-top {
+  display: flex;
+}
+
+.page-footer__col-about h2 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--second-text-color);
+}
+
+.page-footer__col-menu {
+  margin-left: 98px;
+}
+
+.page-footer__col-menu h2 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--second-text-color);
+}
+
+.page-footer__col-contacts h2 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--second-text-color);
+}
+
+.page-footer__col-about ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.page-footer__col-menu ul {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.page-footer__col-contacts {
+  margin-left: auto;
+}
+
+.page-footer__col-contacts ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
